--- a/vacanze-back.csproj
+++ b/vacanze-back.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="NLog" Version="4.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="LogicLayer\Grupo2" />
+    <Folder Include="Persistance\Grupo2" />
+  </ItemGroup>
+
 </Project>
