--- a/vacanze-back.csproj
+++ b/vacanze-back.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Npgsql" Version="4.0.6" />
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="NLog" Version="4.6.2" />
   </ItemGroup>
