Feat: Falto colocar la carpeta LogicLayer

--- a/vacanze-back.csproj
+++ b/vacanze-back.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <Folder Include="VacanzeApiTest" />
+    <Folder Include="VacanzeApi\LogicLayer" />
   </ItemGroup>
 
 </Project>
