Adaptado el back a la nueva estructura
Agregada Carpeta Test

--- a/vacanze-back.csproj
+++ b/vacanze-back.csproj
@@ -23,6 +23,8 @@
 
   <ItemGroup>
 
+    <Folder Include="Controllers\" />
+
     <Folder Include="Entities\NewFolder\" />
     <Folder Include="LogicLayer\Grupo2" />
     <Folder Include="Persistence\Grupo2" />
