--- a/vacanze-back.csproj
+++ b/vacanze-back.csproj
@@ -28,6 +28,7 @@
     <Folder Include="Entities\NewFolder\" />
     <Folder Include="LogicLayer\Grupo2" />
     <Folder Include="Persistence\Grupo2" />
+    <Folder Include="VacanzeApi\Common\Exceptions\Grupo13\" />
 
     <Folder Include="VacanzeApi\LogicLayer" />
 
