--- a/.gitignore
+++ b/.gitignore
@@ -557,3 +557,5 @@ MigrationBackup/
 # End of https://www.gitignore.io/api/rider,aspnetcore,visualstudio,visualstudiocode
 vacanze-back.sln
 
+#sln
+*.sln
