Login Service Added

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,15 @@
 {
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "IdentityConnection": ""
+  },
+  "ApplicationSettings": {
+    "Client_URL": "http://localhost:44362"
+  }
 }
