--- a/vacanze-back.csproj
+++ b/vacanze-back.csproj
@@ -8,6 +8,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\**" />
+    <Compile Remove="Entities\**" />
+    <Compile Remove="LogicLayer\**" />
+    <Compile Remove="VacanzeApi\LogicLayer\**" />
+    <Content Remove="Controllers\**" />
+    <Content Remove="Entities\**" />
+    <Content Remove="LogicLayer\**" />
+    <Content Remove="VacanzeApi\LogicLayer\**" />
+    <EmbeddedResource Remove="Controllers\**" />
+    <EmbeddedResource Remove="Entities\**" />
+    <EmbeddedResource Remove="LogicLayer\**" />
+    <EmbeddedResource Remove="VacanzeApi\LogicLayer\**" />
+    <None Remove="Controllers\**" />
+    <None Remove="Entities\**" />
+    <None Remove="LogicLayer\**" />
+    <None Remove="VacanzeApi\LogicLayer\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
 
@@ -22,15 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-
-    <Folder Include="Controllers\" />
-
-    <Folder Include="Entities\NewFolder\" />
-    <Folder Include="LogicLayer\Grupo2" />
-    <Folder Include="Persistence\Grupo2" />
     <Folder Include="VacanzeApi\Common\Exceptions\Grupo13\" />
-
-    <Folder Include="VacanzeApi\LogicLayer" />
 
   </ItemGroup>
 
