scripts and  controllers added

--- a/vacanze-back.csproj
+++ b/vacanze-back.csproj
@@ -27,8 +27,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.1.5.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
 
     <PackageReference Include="Npgsql" Version="4.0.6" />
 
