--- a/appsettings.json
+++ b/appsettings.json
@@ -1,15 +1,8 @@
 {
-
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "IdentityConnection": ""
-  },
-  "ApplicationSettings": {
-    "Client_URL": "http://localhost:44362"
-  }
+  "AllowedHosts": "*"
 }
